remove image white space, fixed location

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -15,12 +15,12 @@ ul.nav-logged li {
 }
 
 img {
-  length: 55px;
   width: 55px;
 }
 
 #logo {
   float: left;
+  margin-left: -9%;
 }
 
 .nav-account ul {
